--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-collapse navbar-light p-0">
 
         <a class="navbar-brand pb-0 pt-0" href="../index.html">
-            <img src="/img/logo.jpeg" alt="" width="100" height="70">
+            <img src="img/logo.jpeg" alt="" width="100" height="70">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
